; ModuleID = '/home/carl/AnghaBench/linux/net/ieee802154/extr_socket.c_dgram_hash.c'
source_filename = "/home/carl/AnghaBench/linux/net/ieee802154/extr_socket.c_dgram_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }

@dgram_lock = common dso_local global i32 0, align 4
@dgram_head = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sock*)* @dgram_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dgram_hash(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %3 = call i32 @write_lock_bh(i32* @dgram_lock)
  %4 = load %struct.sock*, %struct.sock** %2, align 8
  %5 = call i32 @sk_add_node(%struct.sock* %4, i32* @dgram_head)
  %6 = load %struct.sock*, %struct.sock** %2, align 8
  %7 = call i32 @sock_net(%struct.sock* %6)
  %8 = load %struct.sock*, %struct.sock** %2, align 8
  %9 = getelementptr inbounds %struct.sock, %struct.sock* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @sock_prot_inuse_add(i32 %7, i32 %10, i32 1)
  %12 = call i32 @write_unlock_bh(i32* @dgram_lock)
  ret i32 0
}

declare dso_local i32 @write_lock_bh(i32*) #1

declare dso_local i32 @sk_add_node(%struct.sock*, i32*) #1

declare dso_local i32 @sock_prot_inuse_add(i32, i32, i32) #1

declare dso_local i32 @sock_net(%struct.sock*) #1

declare dso_local i32 @write_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
